<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/menu_disease"
        android:icon="@drawable/ic_tips_and_info_24"
        android:title="@string/menu_info"/>

    <item
        android:id="@+id/menu_tasks"
        android:icon="@drawable/ic_baseline_child_care_24"
        android:title="@string/menu_task"/>

    <item
        android:id="@+id/menu_stock"
        android:icon="@drawable/ic_action_name"
        android:title="@string/menu_stock"/>

    <item
        android:id="@+id/menu_additionalInfo"
        android:icon="@drawable/ic_fyi"
        android:title="FYI"/>


<!--    <item-->
<!--        android:id="@+id/menu_settings"-->
<!--        android:title="@string/menu_setting"/>-->


</menu>