<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radient_colour_button"
        android:gravity="center"
        android:text="@string/additional_infomation"
        android:textColor="#283A40"
        android:textSize="34sp"
        android:textStyle="bold"></TextView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radient_colour_button"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para1"
                android:textAllCaps="false"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para2"
                android:background="@drawable/radient_colour_button"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para3"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para4"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para5"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para6"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para7"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp"></Button>

            <Button
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/add_para8"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:gravity="start"
                android:background="@drawable/radient_colour_button"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>

