<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.LandingActivity">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="106dp"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="105dp"
                android:contentDescription="@string/image_logo"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30sp"
                    android:layout_below="@id/logoImageView"
                    android:id="@+id/genderImageView"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/maleImageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/image_boy"
                        android:layout_below="@id/logoImageView"
                        android:src="@drawable/boy" />

                    <ImageView
                        android:id="@+id/femaleImageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/image_girl"
                        android:layout_below="@id/logoImageView"
                        android:src="@drawable/girl"
                        android:layout_toRightOf="@id/maleImageView"/>
                </LinearLayout>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_below="@id/genderImageView">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radiobutton_boy"
                    android:textColor="#009688" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radiobutton_girl"
                    android:textColor="#E91E63"
                    android:textColorHighlight="#7D5EB3" />

            </RadioGroup>

            <EditText
                android:id="@+id/babyNameEditText"
                android:layout_width="296dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="13dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="#009688"
                android:textSize="14sp"
                android:layout_below="@id/genderRadioGroup"/>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:text="@string/text_choose_age"
                android:textColor="#009688"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/babyNameEditText"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/ageSpinner"
                android:layout_width="253dp"
                android:layout_height="20dp"
                android:layout_marginStart="79dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="79dp"
                android:layout_below="@id/textView8"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/button_start"
                android:text="@string/button_start"
                android:textColor="#E91E63"
                android:layout_below="@id/ageSpinner"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>